--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -12,7 +13,6 @@
 
     <h2>test</h2>
 
-
-
+    <a href="https://jesikarenea.github.io/Portfolio/">Visit my Portfolio!</a>
 
 </body>
