--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
     <h2>test</h2>
 
-    <a href="https://jesikarenea.github.io/Portfolio/" target="blank">Visit my Portfolio!</a>
+    <a href="https://jesikarenea.github.io/Portfolio/" target="_blank">Visit my Portfolio!</a>
 
 </body>
