Used Bootstrap to style Live Page

--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <head>
     <title>JESSICA HAYES | LIVE PAGE</title>
 
-
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
-    <h1>Jessica Hayes Live Github Page</h1>
+    <div class="jumbotron">
+        <h1 class="display-4">Jessica Hayes Live Github Page</h1>
+        <p class="lead">This page is currently Under Construction!</p>
+        <hr class="my-4">
+        <a class="btn btn-primary btn-lg" href="https://jesikarenea.github.io/Portfolio/" role="button" target="_blank">Visit Portfolio</a>
+        <a class="btn btn-primary btn-lg" href="https://roleplayrisque.com" role="button" target="_blank">Visit Online Boutique</a>
+        <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jessicahayesucf/" role="button" target="_blank">Visit LinkedIn</a>
 
-    <h2>test</h2>
 
-    <a href="https://jesikarenea.github.io/Portfolio/" target="_blank">Visit my Portfolio!</a>
+    
+    </div>
 
-</body>
