--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 
 <head>
-    <title>JESSICA HAYES | LIVE PAGE</title>
+    <title>JESSICA HAYES | FULL STACK WEBDEV</title>
+
+
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -12,29 +22,86 @@
 <body>
 
     <div class="jumbotron">
-        <h1 class="display-4">Jessica Hayes Live Github Page</h1>
+        <h1 class="display-4">Jessica Hayes: Full-Stack Development</h1>
         <hr class="my-4">
 
-        <a class="btn btn-primary btn-lg" href="https://jesikarenea.github.io/Responsive_Portfolio/" role="button"
-            target="_blank">Visit Portfolio</a>
+        <nav>
+            <div class="nav-wrapper nav">
+                <a href="#" class="brand-logo right"></a>
+                <ul id="nav-mobile" class="left hide-on-med-and-down">
+                    <li><a href="https://jesikarenea.github.io/Responsive_Portfolio/" target="_blank">Full Stack Portfolio</a></li>
+                    <li><a href="https://github.com/jesikarenea" target="_blank">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/jessicahayesucf/" target="_blank">LinkedIn</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
-        <a class="btn btn-primary btn-lg" href="https://github.com/jesikarenea" role="button" target="_blank">Visit
-            Github Repo</a>
+    <div class="container">
+        <div class="row">
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="assets/JHDesign.png">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Jessica Hayes: Design and Development<i
+                            class="material-icons right">...</i></span>
+                    <p><a href="https://JessicaHayesDesign.com" target="_blank">Jessica Hayes: Design and Development</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Jessica Hayes: Design and Development<i
+                            class="material-icons right">X</i></span>
+                    <p>
+                        One of the goals of JH Design is to not only provide you with a professionally built website
+                        that looks great, but to be your partner for all of your online needs. I offer full-service web
+                        design, meaning I am able to complete all your Graphic Design needs, your WordPress development
+                        needs, Logo and Business Card/other Print Design needs, as well as SEO, Social Media Marketing
+                        and Content creation. If you need something I cannot do, I will help you find someone who can.
+                    </p>
+                </div>
+            </div>
 
-        <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jessicahayesucf/" role="button"
-            target="_blank">Visit LinkedIn</a>
-        <br>
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="assets/cheeky-swimwear.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Cheeky-Swimwear<i
+                            class="material-icons right">...</i></span>
+                    <p><a href="https://cheeky-swimwear.com" target="_blank">Cheeky-Swimwear.com</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Cheeky-Swimwear<i
+                            class="material-icons right">X</i></span>
+                    <p>Cheeky-Bikini Swimwear is an American swimwear brand known for our unique fabrics, stylish
+                        accessories, and tasteful design.
+                        <br><br>
+                        Whether a trip to the beach, a day at the pool, or just lounge outside in, we are sure you will
+                        find the perfect piece for any occasion!
+                    </p>
+                </div>
+            </div>
 
-        <a class="btn btn-primary btn-lg" href="https://JessicaHayesDesign.com" role="button" target="_blank">Jessica
-            Hayes Design</a>
-
-        <a class="btn btn-primary btn-lg" href="https://cheeky-swimwear.com" role="button" target="_blank">Online
-            Swimwear Boutique</a>
-
-        <a class="btn btn-primary btn-lg" href="https://roleplayrisque.com" role="button" target="_blank">Online
-            Lingerie Boutique</a>
-
-
-
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="assets/roleplayrisque.png">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">RoleplayRisque<i
+                            class="material-icons right">...</i></span>
+                    <p><a href="https://RoleplayRisque.com" target="_blank">RoleplayRisque.com</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">RoleplayRisque<i
+                            class="material-icons right">X</i></span>
+                    <p>Lingerie, Costumes and Accessories Boutique
+                        <br><br>
+                        Welcome to RoleplayRisque, a discreet online boutique for your adult fantasy fun! Add some spice
+                        to your bedroom with our premium roleplay costumes, seductive lingerie, S&M products, and
+                        bedroom accessories!
+                    </p>
+                </div>
+            </div>
+        </div>
 
     </div>
