Fixed mobile nav

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <nav>
             <div class="nav-wrapper nav">
                 <a href="#" class="brand-logo right"></a>
-                <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <ul>
+                    <!-- <li><a href="about.html" target="_blank">About</a></li> -->
+
                     <li><a href="https://jesikarenea.github.io/Responsive_Portfolio/" target="_blank">Full Stack Portfolio</a></li>
                     <li><a href="https://github.com/jesikarenea" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/jessicahayesucf/" target="_blank">LinkedIn</a></li>
