Updated mobile nav visability

--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
                 <ul>
                     <!-- <li><a href="about.html" target="_blank">About</a></li> -->
 
-                    <li><a href="https://jesikarenea.github.io/Responsive_Portfolio/" target="_blank">Full Stack Portfolio</a></li>
+                    <li><a href="https://jesikarenea.github.io/Responsive_Portfolio/" target="_blank">Full Stack
+                            Portfolio</a></li>
                     <li><a href="https://github.com/jesikarenea" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/jessicahayesucf/" target="_blank">LinkedIn</a></li>
+                    <li><a href="devdefs.html" target="_blank">Developer Definitions</a></li>
+
+
                 </ul>
             </div>
         </nav>
@@ -48,7 +52,8 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Jessica Hayes: Design and Development<i
                             class="material-icons right">...</i></span>
-                    <p><a href="https://JessicaHayesDesign.com" target="_blank">Jessica Hayes: Design and Development</a></p>
+                    <p><a href="https://JessicaHayesDesign.com" target="_blank">Jessica Hayes: Design and
+                            Development</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Jessica Hayes: Design and Development<i
