formatted definition cards for materialize

--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
 
 </head>
 
-<body>
-
+<header>
     <div class="jumbotron">
         <h1 class="display-4">Jessica Hayes: Full-Stack Development</h1>
         <hr class="my-4">
 
         <nav>
             <div class="nav-wrapper nav">
-                <a href="#" class="brand-logo right"></a>
+                <a href="index.html" class="brand-logo right">JH</a>
                 <ul>
                     <!-- <li><a href="about.html" target="_blank">About</a></li> -->
 
@@ -35,14 +34,16 @@
                             Portfolio</a></li>
                     <li><a href="https://github.com/jesikarenea" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/jessicahayesucf/" target="_blank">LinkedIn</a></li>
-                    <li><a href="devdefs.html" target="_blank">Developer Definitions</a></li>
+                    <li><a href="devdefs.html">Developer Definitions</a></li>
 
 
                 </ul>
             </div>
         </nav>
     </div>
+</header>
 
+<body>
     <div class="container">
         <div class="row">
             <div class="card">
@@ -112,3 +113,4 @@
         </div>
 
     </div>
+</body>
