--- a/devdefs.html
+++ b/devdefs.html
@@ -55,12 +55,11 @@
                 <div class="col s12 m6 definitions-display">
                   <div class="card grey darken-1 def-card">
                     <div class="card-content white-text">
-                      <span class="card-title term-title">Card Title</span>
-                      <p class="card-text def-card">I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
+                      <span class="card-title term-title">Term</span>
+                      <p class="card-text def-card">Definition Insert</p>
                     </div>
                     <div class="card-action">
-                      <a class ="def-ref-link" href="#">This is a link</a>
+                      <a href="#">Reference Link</a>
                     </div>
                   </div>
                 </div>
