--- a/devdefs.html
+++ b/devdefs.html
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col s12 m6 definitions-display">
                   <div class="card grey darken-1 def-card">
-                    <div class="card-content white-text">
+                    <div class="card-content newDefContent white-text">
                       <span class="card-title term-title">Term</span>
                       <p class="card-text def-card">Definition Insert</p>
                     </div>
