Updated Directory for DB

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="card">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="assets/JHDesign.png">
+                    <img class="activator" src="assets/images/JHDesign.png">
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Jessica Hayes: Design and Development<i
@@ -71,7 +71,7 @@
 
             <div class="card">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="assets/cheeky-swimwear.jpg">
+                    <img class="activator" src="assets/images/cheeky-swimwear.jpg">
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Cheeky-Swimwear<i
@@ -92,7 +92,7 @@
 
             <div class="card">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="assets/roleplayrisque.png">
+                    <img class="activator" src="assets/images/roleplayrisque.png">
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">RoleplayRisque<i
