--- a/public/devdefs.html
+++ b/public/devdefs.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -104,5 +104,5 @@
     <script src="https://kit.fontawesome.com/d362bae7c2.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
