Updated page with Resume and formatting

--- a/public/resume.html
+++ b/public/resume.html
@@ -48,55 +48,13 @@
 
 <body>
 
-    <div class="container definitions">
-        <h5>Developer Definitions</h5>
+    <div class="container">
+        <h5>Resume</h5>
         <hr>
-        <!-- <div class="definitions-display"> -->
-            <div class="row definitions-container">
-                <div class="col s12 m6 definitions-display">
-                  <div class="card grey darken-1 def-card">
-                    <div class="card-content newDefContent white-text">
-                      <span class="card-title term-title">Term</span>
-                      <p class="card-text def-card">Definition Insert</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">Reference Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
 
-
-        <!-- </div> -->
-    </div>
-
-
-    <div class="container input-container">
-        <div class="row">
-            <form class="col s3">
-                <div class="input-field col s12">
-                    <textarea id="term" class="materialize-textarea"></textarea>
-                    <label for="textarea1">Term</label>
-                </div>
-            </form>
-
-            <form class="col s9">
-                <div class="input-field col s12">
-                    <textarea id="definition" class="materialize-textarea"></textarea>
-                    <label for="textarea1">Definition</label>
-                </div>
-            </form>
-
-            <form class="col s9">
-                <div class="input-field col s12">
-                    <textarea id="reference" class="materialize-textarea"></textarea>
-                    <label for="textarea1">Reference Link</label>
-                </div>
-            </form>
-
-            <input type="submit" class="btn waves-effect waves-light" id="submitDefBtn" value="Submit" />
+        <div class="resume">
+            <img src="./assets/images/JH_Resume.png">
         </div>
-
 
     </div>
 
