--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,14 @@
                 <ul>
                     <!-- <li><a href="about.html" target="_blank">About</a></li> -->
 
-                    <li><a href="https://jesikarenea.github.io/Responsive_Portfolio/" target="_blank">Full Stack
+                    <li><a href="https://jesikarenea.github.io/Responsive_Portfolio/portfolio.html" target="_blank">Full
+                            Stack
                             Portfolio</a></li>
                     <li><a href="https://github.com/jesikarenea" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/jessicahayesucf/" target="_blank">LinkedIn</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                     <li><a href="devdefs.html">Developer Definitions</a></li>
+
 
 
                 </ul>
@@ -45,72 +48,83 @@
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="assets/images/JHDesign.png">
+        <h5>Business</h5>
+        <hr>
+
+        <div class="index">
+            <div class="row">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/JHDesign.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Jessica Hayes: Design and
+                            Development<i class="material-icons right">...</i></span>
+                        <p><a href="https://JessicaHayesDesign.com" target="_blank">Jessica Hayes: Design and
+                                Development</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Jessica Hayes: Design and Development<i
+                                class="material-icons right">X</i></span>
+                        <p>
+                            One of the goals of JH Design is to not only provide you with a professionally built website
+                            that looks great, but to be your partner for all of your online needs. I offer full-service
+                            web
+                            design, meaning I am able to complete all your Graphic Design needs, your WordPress
+                            development
+                            needs, Logo and Business Card/other Print Design needs, as well as SEO, Social Media
+                            Marketing
+                            and Content creation. If you need something I cannot do, I will help you find someone who
+                            can.
+                        </p>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Jessica Hayes: Design and Development<i
-                            class="material-icons right">...</i></span>
-                    <p><a href="https://JessicaHayesDesign.com" target="_blank">Jessica Hayes: Design and
-                            Development</a></p>
+
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/cheeky-swimwear.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Cheeky-Swimwear<i
+                                class="material-icons right">...</i></span>
+                        <p><a href="https://cheeky-swimwear.com" target="_blank">Cheeky-Swimwear.com</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Cheeky-Swimwear<i
+                                class="material-icons right">X</i></span>
+                        <p>Cheeky-Bikini Swimwear is an American swimwear brand known for our unique fabrics, stylish
+                            accessories, and tasteful design.
+                            <br><br>
+                            Whether a trip to the beach, a day at the pool, or just lounge outside in, we are sure you
+                            will
+                            find the perfect piece for any occasion!
+                        </p>
+                    </div>
                 </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Jessica Hayes: Design and Development<i
-                            class="material-icons right">X</i></span>
-                    <p>
-                        One of the goals of JH Design is to not only provide you with a professionally built website
-                        that looks great, but to be your partner for all of your online needs. I offer full-service web
-                        design, meaning I am able to complete all your Graphic Design needs, your WordPress development
-                        needs, Logo and Business Card/other Print Design needs, as well as SEO, Social Media Marketing
-                        and Content creation. If you need something I cannot do, I will help you find someone who can.
-                    </p>
+
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/roleplayrisque.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">RoleplayRisque<i
+                                class="material-icons right">...</i></span>
+                        <p><a href="https://RoleplayRisque.com" target="_blank">RoleplayRisque.com</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">RoleplayRisque<i
+                                class="material-icons right">X</i></span>
+                        <p>Lingerie, Costumes and Accessories Boutique
+                            <br><br>
+                            Welcome to RoleplayRisque, a discreet online boutique for your adult fantasy fun! Add some
+                            spice
+                            to your bedroom with our premium roleplay costumes, seductive lingerie, S&M products, and
+                            bedroom accessories!
+                        </p>
+                    </div>
                 </div>
             </div>
 
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="assets/images/cheeky-swimwear.jpg">
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Cheeky-Swimwear<i
-                            class="material-icons right">...</i></span>
-                    <p><a href="https://cheeky-swimwear.com" target="_blank">Cheeky-Swimwear.com</a></p>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Cheeky-Swimwear<i
-                            class="material-icons right">X</i></span>
-                    <p>Cheeky-Bikini Swimwear is an American swimwear brand known for our unique fabrics, stylish
-                        accessories, and tasteful design.
-                        <br><br>
-                        Whether a trip to the beach, a day at the pool, or just lounge outside in, we are sure you will
-                        find the perfect piece for any occasion!
-                    </p>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="assets/images/roleplayrisque.png">
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">RoleplayRisque<i
-                            class="material-icons right">...</i></span>
-                    <p><a href="https://RoleplayRisque.com" target="_blank">RoleplayRisque.com</a></p>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">RoleplayRisque<i
-                            class="material-icons right">X</i></span>
-                    <p>Lingerie, Costumes and Accessories Boutique
-                        <br><br>
-                        Welcome to RoleplayRisque, a discreet online boutique for your adult fantasy fun! Add some spice
-                        to your bedroom with our premium roleplay costumes, seductive lingerie, S&M products, and
-                        bedroom accessories!
-                    </p>
-                </div>
-            </div>
         </div>
-
     </div>
 </body>
