--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="public/assets/css/style.css">
 
 </head>
 
@@ -35,8 +35,8 @@
                             Portfolio</a></li>
                     <li><a href="https://github.com/jesikarenea" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/jessicahayesucf/" target="_blank">LinkedIn</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="devdefs.html">Developer Definitions</a></li>
+                    <li><a href="/public/resume.html">Resume</a></li>
+                    <li><a href="/public/devdefs.html">Developer Definitions</a></li>
 
 
 
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/JHDesign.png">
+                        <img class="activator" src="public/assets/images/JHDesign.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Jessica Hayes: Design and
@@ -82,7 +82,7 @@
 
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/cheeky-swimwear.jpg">
+                        <img class="activator" src="public/assets/images/cheeky-swimwear.jpg">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Cheeky-Swimwear<i
@@ -104,7 +104,7 @@
 
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/roleplayrisque.png">
+                        <img class="activator" src="public/assets/images/roleplayrisque.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">RoleplayRisque<i
