--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                             Portfolio</a></li>
                     <li><a href="https://github.com/jesikarenea" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/jessicahayesucf/" target="_blank">LinkedIn</a></li>
-                    <li><a href="/public/resume.html">Resume</a></li>
-                    <li><a href="/public/devdefs.html">Developer Definitions</a></li>
+                    <li><a href="public/resume.html">Resume</a></li>
+                    <li><a href="public/devdefs.html">Developer Definitions</a></li>
 
 
 
