--- a/public/index.html
+++ b/public/index.html
@@ -1,130 +1,64 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+    name="title"
+    content="Jessica Hayes: React Portfolio"
+  />
+    <meta
+      name="description"
+      content="Jessica Hayes: Full-Stack Web Development Portfolio, UCF Coding Bootcamp"
+    />
+    <meta name="image"
+    content="https://jesikarenea.github.io/React_Portfolio/static/media/ucfPendant.bdb727c5.PNG"
+    />
 
-<head>
-    <title>JESSICA HAYES | FULL STACK WEBDEV</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <!-- Compiled and minified CSS -->
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="path/to/materialize.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
 
-    <!-- Compiled and minified JavaScript -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&family=Oxygen:wght@300;400&display=swap" rel="stylesheet">
+
+
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="path/to/your/bundle.js"></script> 
 
-
-    <link rel="stylesheet" href="assets/css/style.css">
-
-</head>
-
-<header>
-    <div class="jumbotron">
-        <h1 class="display-4">Jessica Hayes: Full-Stack Development</h1>
-        <hr class="my-4">
-
-        <nav>
-            <div class="nav-wrapper nav">
-                <a href="index.html" class="brand-logo right">JH</a>
-                <ul>
-                    <!-- <li><a href="about.html" target="_blank">About</a></li> -->
-
-                    <li><a href="https://jesikarenea.github.io/Responsive_Portfolio/portfolio.html" target="_blank">Full
-                            Stack
-                            Portfolio</a></li>
-                    <li><a href="https://github.com/jesikarenea" target="_blank">GitHub</a></li>
-                    <li><a href="https://www.linkedin.com/in/jessicahayesucf/" target="_blank">LinkedIn</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="devdefs.html">Developer Definitions</a></li>
-
-
-
-                </ul>
-            </div>
-        </nav>
-    </div>
-</header>
-
-<body>
-    <div class="container">
-        <h5>Business</h5>
-        <hr>
-
-        <div class="index">
-            <div class="row">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/JHDesign.png">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Jessica Hayes: Design and
-                            Development<i class="material-icons right">...</i></span>
-                        <p><a href="https://JessicaHayesDesign.com" target="_blank">Jessica Hayes: Design and
-                                Development</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Jessica Hayes: Design and Development<i
-                                class="material-icons right">X</i></span>
-                        <p>
-                            One of the goals of JH Design is to not only provide you with a professionally built website
-                            that looks great, but to be your partner for all of your online needs. I offer full-service
-                            web
-                            design, meaning I am able to complete all your Graphic Design needs, your WordPress
-                            development
-                            needs, Logo and Business Card/other Print Design needs, as well as SEO, Social Media
-                            Marketing
-                            and Content creation. If you need something I cannot do, I will help you find someone who
-                            can.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/cheeky-swimwear.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Cheeky-Swimwear<i
-                                class="material-icons right">...</i></span>
-                        <p><a href="https://cheeky-swimwear.com" target="_blank">Cheeky-Swimwear.com</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Cheeky-Swimwear<i
-                                class="material-icons right">X</i></span>
-                        <p>Cheeky-Bikini Swimwear is an American swimwear brand known for our unique fabrics, stylish
-                            accessories, and tasteful design.
-                            <br><br>
-                            Whether a trip to the beach, a day at the pool, or just lounge outside in, we are sure you
-                            will
-                            find the perfect piece for any occasion!
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/roleplayrisque.png">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">RoleplayRisque<i
-                                class="material-icons right">...</i></span>
-                        <p><a href="https://RoleplayRisque.com" target="_blank">RoleplayRisque.com</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">RoleplayRisque<i
-                                class="material-icons right">X</i></span>
-                        <p>Lingerie, Costumes and Accessories Boutique
-                            <br><br>
-                            Welcome to RoleplayRisque, a discreet online boutique for your adult fantasy fun! Add some
-                            spice
-                            to your bedroom with our premium roleplay costumes, seductive lingerie, S&M products, and
-                            bedroom accessories!
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</body>
+  </body>
+</html>
